Adds new record update page.

--- a/caregiver/patients/00002-updated.html
+++ b/caregiver/patients/00002-updated.html
@@ -47,8 +47,8 @@
           <a href="../../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           <br>
           <br>
-          <br>
-          <br>
+          <p class="success-message">New Record Created Successfully</p>
+          
           <div class="back-button-container">
             <button type="button" class="back-button" onclick="location.href='../patients.html'"><i class="fas fa-chevron-circle-left"></i></button>
           </div>
@@ -96,6 +96,13 @@
           </table>
           <table class="patient-table" id="patient-table">
             <tbody>
+              <tr>
+                <td>004</td>
+                <td>4/2/19</td>
+                <td>Physical Therapy</td>
+                <td>Physical Therapist</td>
+                <td>No</td>
+              </tr>
               <tr>
                 <td>003</td>
                 <td>3/2/19</td>
