--- a/caregiver/patients/records/new-record.html
+++ b/caregiver/patients/records/new-record.html
@@ -6,10 +6,10 @@
     <title>New Century Wellness Group - Caregiver Login</title>
 
     <!-- Browser Tab Icon -->
-    <link rel="icon" href="../../assets/NCWG-Logo.png">
+    <link rel="icon" href="../../../assets/NCWG-Logo.png">
   
     <!-- Styles -->
-    <link rel="stylesheet" href="../../styles/index.processed.css">
+    <link rel="stylesheet" href="../../../styles/index.processed.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
@@ -20,8 +20,8 @@
       <div class="header-wrapper">
         <div class="header">
           <div class="header-image">
-            <a href="../portal.html">
-              <img class="header-logo" src="../../assets/NCWG-Logo.png">
+            <a href="../../portal.html">
+              <img class="header-logo" src="../../../assets/NCWG-Logo.png">
             </a>
           </div>
 
@@ -38,25 +38,25 @@
       <div class="body-wrapper">
         <div class="menu-wrapper"></div>
         <div class="topnav">
-          <a href="../portal.html"><i class="fab fa-medrt"></i> Portal Home</a>
-          <a class="active" href="../patients.html"><i class="fas fa-user-injured"></i> Patients</a>
-          <a href="../appointments.html"><i class="fas fa-calendar-check"></i> Appointments</a>
-          <a href="../schedules.html"><i class="fas fa-clipboard-list"></i> Schedules</a>
-          <a href="../messages.html"><i class="fas fa-envelope-open-text"></i> Messages</a>
-          <a href="../my-profile.html"><i class="fas fa-user-md"></i> My Profile</a>
-          <a href="../../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+          <a href="../../portal.html"><i class="fab fa-medrt"></i> Portal Home</a>
+          <a class="active" href="../../patients.html"><i class="fas fa-user-injured"></i> Patients</a>
+          <a href="../../appointments.html"><i class="fas fa-calendar-check"></i> Appointments</a>
+          <a href="../../schedules.html"><i class="fas fa-clipboard-list"></i> Schedules</a>
+          <a href="../../messages.html"><i class="fas fa-envelope-open-text"></i> Messages</a>
+          <a href="../../my-profile.html"><i class="fas fa-user-md"></i> My Profile</a>
+          <a href="../../../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           <br>
           <br>
           <br>
           <br>
           <div class="back-button-container">
-            <button type="button" class="back-button" onclick="location.href='../patients.html'"><i class="fas fa-chevron-circle-left"></i></button>
+            <button type="button" class="back-button" onclick="location.href='../00002.html'"><i class="fas fa-chevron-circle-left"></i></button>
           </div>
           <div class="title-container">
-            <h2>Medical Record List</h2>
+            <h2>New Medical Record</h2>
           </div>
-          <div class="new-record-button-container">
-            <button type="button" class="new-record-button" onclick="location.href='records/new-record.html'"><i class="fas fa-plus-circle"></i></button>
+          <div class="save-record-button-container">
+            <button type="button" class="save-record-button" onclick="location.href='../00002-updated.html'"><i class="fas fa-save"></i></button>
           </div>
 
           <div class="table-container">
@@ -124,6 +124,6 @@
     </div>
     
     <!-- Scripts -->
-    <script src="../../scripts/index.js"></script>
+    <script src="../../../scripts/index.js"></script>
   </body>
 </html>
