--- a/caregiver/patients.html
+++ b/caregiver/patients.html
@@ -54,6 +54,10 @@
             <i class="fas fa-search" id="search-icon"></i>
             <input id="search" type="text" placeholder="Search" title="Search any category" onkeyup="filterTable(event)">
           </div>
+          <div class="new-patient-button-container">
+            <button type="button" class="new-patient-button" onclick="location.href='patients/new-patient.html'"><i class="fas fa-plus-circle"></i></button>
+          </div>
+          <br>
           <br>
           <table class="patient-table">
             <thead>
@@ -75,7 +79,7 @@
                 <td>3/1/19</td>
                 <td>4/1/19</td>
               </tr>
-              <tr onclick="navigate()">
+              <tr onclick="location.href='patients/00002.html'">
                 <td>00002</td>
                 <td>Ressler</td>
                 <td>Zachary</td>
