--- a/caregiver/patients/records/new-record.html
+++ b/caregiver/patients/records/new-record.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Meta -->
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>New Century Wellness Group - Caregiver Login</title>
 
     <!-- Browser Tab Icon -->
@@ -37,91 +38,55 @@
     
       <div class="body-wrapper">
         <div class="menu-wrapper"></div>
-        <div class="topnav">
-          <a href="../../portal.html"><i class="fab fa-medrt"></i> Portal Home</a>
-          <a class="active" href="../../patients.html"><i class="fas fa-user-injured"></i> Patients</a>
-          <a href="../../appointments.html"><i class="fas fa-calendar-check"></i> Appointments</a>
-          <a href="../../schedules.html"><i class="fas fa-clipboard-list"></i> Schedules</a>
-          <a href="../../messages.html"><i class="fas fa-envelope-open-text"></i> Messages</a>
-          <a href="../../my-profile.html"><i class="fas fa-user-md"></i> My Profile</a>
-          <a href="../../../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
-          <br>
-          <br>
-          <br>
-          <br>
-          <div class="back-button-container">
-            <button type="button" class="back-button" onclick="location.href='../00002.html'"><i class="fas fa-chevron-circle-left"></i></button>
-          </div>
-          <div class="title-container">
-            <h2>New Medical Record</h2>
-          </div>
-          <div class="save-record-button-container">
-            <button type="button" class="save-record-button" onclick="location.href='../00002-updated.html'"><i class="fas fa-save"></i></button>
-          </div>
+          <div class="topnav">
+            <a href="../../portal.html"><i class="fab fa-medrt"></i> Portal Home</a>
+            <a class="active" href="../../patients.html"><i class="fas fa-user-injured"></i> Patients</a>
+            <a href="../../appointments.html"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a href="../../schedules.html"><i class="fas fa-clipboard-list"></i> Schedules</a>
+            <a href="../../messages.html"><i class="fas fa-envelope-open-text"></i> Messages</a>
+            <a href="../../my-profile.html"><i class="fas fa-user-md"></i> My Profile</a>
+            <a href="../../../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="back-button-container">
+              <button type="button" class="back-button" onclick="location.href='../00002.html'"><i class="fas fa-chevron-circle-left"></i></button>
+            </div>
+            <div class="title-container" style="transform: translate(0, 0)">
+              <h2>New Medical Record</h2>
+            </div>
+            <div class="save-record-button-container">
+              <button type="button" class="save-record-button" onclick="location.href='../00002-updated.html'"><i class="fas fa-save"></i></button>
+            </div>
 
-          <div class="table-container">
-            <table class="patient-info">
-              <thead>
-                <tr>
-                  <td>Patient ID</td>
-                  <td>Last Name</td>
-                  <td>First Name</td>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>00002</td>
-                  <td>Ressler</td>
-                  <td>Zachary</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="tab-container">
+              <div class="tab">
+                <button class="tablinks" onclick="openTab(event, 'patient-info')" id="defaultOpen">Patient Information</button>
+                <button class="tablinks" onclick="openTab(event, 'medical-history')">Medical History</button>
+                <button class="tablinks" onclick="openTab(event, 'physical-exam')">Physical Examination</button>
+                <button class="tablinks" onclick="openTab(event, 'notes')"> Additional Notes</button>
+               </div>
+
+              <div id="patient-info" class="tabcontent">
+                <h3>Patient Information</h3>
+              </div>
+
+              <div id="medical-history" class="tabcontent">
+                <h3>Medical History</h3>
+              </div>
+
+              <div id="physical-exam" class="tabcontent">
+                <h3>Physical Examination</h3>
+              </div>
+
+              <div id="notes" class="tabcontent">
+                <h3>Additional Notes</h3>
+              </div>
+            </div>
+
           </div>
-          <br>
-          <div class="search-container">
-            <i class="fas fa-search" id="search-icon"></i>
-            <input id="search" type="text" placeholder="Search" title="Search any category" onkeyup="filterTable(event)">
-          </div>
-          <br>
-          <table class="patient-table">
-            <thead>
-              <tr>
-                <td>Number</td>
-                <td>Date</td>
-                <td>Reason</td>
-                <td>Visit Type</td>
-                <td>Paid</td>
-              </tr>
-            </thead>
-          </table>
-          <table class="patient-table" id="patient-table">
-            <tbody>
-              <tr>
-                <td>003</td>
-                <td>3/2/19</td>
-                <td>Physical Examination</td>
-                <td>Annual</td>
-                <td>Yes</td>
-              </tr>
-              <tr>
-                <td>002</td>
-                <td>2/2/19</td>
-                <td>Ear Infection</td>
-                <td>Physician</td>
-                <td>Yes</td>
-              </tr>
-              <tr>
-                <td>001</td>
-                <td>1/2/19</td>
-                <td>Flu Vaccine</td>
-                <td>Nurse</td>
-                <td>Yes</td>
-              </tr>
-            </tbody>
-          </table>
         </div>
-      </div>
-    </div>
     
     <!-- Scripts -->
     <script src="../../../scripts/index.js"></script>
