Adds My Profile page content.

--- a/caregiver/my-profile.html
+++ b/caregiver/my-profile.html
@@ -47,7 +47,55 @@
           <a href="../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           <br>
           <br>
+          <br>
+          <br>
+          <div>
+            <h2>Profile</h2>
+            <h3> Review, update, or share your information in one place.</h3>
+          </div>
           
+          <div class="table-container" style="width: 78%; transform: translate(0, -4px);">
+            <table class="patient-table">
+              <thead>
+                <tr>
+                  <td>Name:</td>
+                  <td><b>Radha Timsina</b></td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td rowspan="2">Address:</td>
+                  <td>1762 Malor Dr.</td>  
+                </tr>
+                <tr>
+                  <td>Pittsburgh, PA 15227</td>
+                </tr>
+                <tr>
+                  <td rowspan="2">Telephone:</td>
+                  <td>412-980-5872</td>
+                </tr>
+                <tr>
+                  <td>412-254-6120</td>
+                </tr>
+                <tr>
+                  <td rowspan="5">Insurance:</td>
+                  <td><b>Plan:</b> Upmc For You</td>
+                </tr>
+                <tr>
+                  <td><b>Subscriber:</b> Timsina, Radha K</td>
+                </tr>
+                <tr>
+                  <td><b>Subscriber ID</b> 12635456487</td>
+                </tr>
+                <tr>
+                  <td><b>Group ID:</b> MA0034417</td>
+                </tr>
+                <tr>
+                  <td><b>Plan:</b> Upmc For You</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
