Tons of updates.

--- a/caregiver/patients-updated.html
+++ b/caregiver/patients-updated.html
@@ -47,8 +47,8 @@
           <a href="../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           <br>
           <br>
-          <br>
-          <br>
+          <p class="success-message">New Patient Created Successfully</p>
+          
           <h2>Patient List</h2>
           <div class="search-container">
             <i class="fas fa-search" id="search-icon"></i>
@@ -72,12 +72,19 @@
           </table>
           <table class="patient-table" id="patient-table">
             <tbody>
+              <tr class="new-record-row">
+                <td>00004</td>
+                <td>Dupak</td>
+                <td>Larry</td>
+                <td>3/4/19</td>
+                <td>4/4/19</td>
+              </tr>
               <tr>
-                <td>00001</td>
-                <td>Dinofrio</td>
-                <td>Christian</td>
-                <td>3/1/19</td>
-                <td>4/1/19</td>
+                <td>00003</td>
+                <td>Timsina</td>
+                <td>Radha</td>
+                <td>3/3/19</td>
+                <td>4/3/19</td>
               </tr>
               <tr onclick="location.href='patients/00002.html'">
                 <td>00002</td>
@@ -87,11 +94,11 @@
                 <td>4/2/19</td>
               </tr>
               <tr>
-                <td>00003</td>
-                <td>Timsina</td>
-                <td>Radha</td>
-                <td>3/3/19</td>
-                <td>4/3/19</td>
+                <td>00001</td>
+                <td>Dinofrio</td>
+                <td>Christian</td>
+                <td>3/1/19</td>
+                <td>4/1/19</td>
               </tr>
             </tbody>
           </table>
