--- a/caregiver/patients/00002-updated.html
+++ b/caregiver/patients/00002-updated.html
@@ -50,7 +50,7 @@
             <p class="success-message">New Record Created Successfully</p>
             
             <div class="back-button-container">
-              <button type="button" class="back-button" onclick="location.href='../patients.html'"><i class="fas fa-chevron-circle-left"></i></button>
+              <button type="button" class="back-button" title="Back" onclick="location.href='../patients.html'"><i class="fas fa-chevron-circle-left"></i></button>
             </div>
             <div class="title-container">
               <h2>Patient</h2>
@@ -85,7 +85,7 @@
               <h2>Patient Records</h2>
             </div>
             <div class="new-record-button-container">
-              <button type="button" class="new-record-button" onclick="location.href='records/new-record.html'"><i class="fas fa-plus-circle"></i></button>
+              <button type="button" class="new-record-button" title="Create New Record" onclick="location.href='records/new-record.html'"><i class="fas fa-plus-circle"></i></button>
             </div>
 
             <div style="transform: translate(0, -30px)">
