--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
         <br>
         <br>
         <form class="login-items">
-          Username: <input type="text" name="username" value="" class="username">
+          Username: <input type="text" name="username" class="username" id="username">
           <br>
           <br>
           Password: 
-          <input type="password" name="password" value="" class="password">
+          <input type="password" name="password" class="password" id="password">
           <br>
           <br>
           <br>
         </form>
         
-        <form action="caregiver/portal.html" class="login-items">
+        <form class="login-items" action="caregiver/portal.html">
           <input type="submit" value="Login" class="login-button" onclick="authenticate()">
         </form>
       </div>
