--- a/caregiver/patients/records/new-record.html
+++ b/caregiver/patients/records/new-record.html
@@ -51,13 +51,13 @@
             <br>
             <br>
             <div class="back-button-container">
-              <button type="button" class="back-button" onclick="location.href='../00002.html'"><i class="fas fa-chevron-circle-left"></i></button>
+              <button type="button" class="back-button" title="Back" onclick="location.href='../00002.html'"><i class="fas fa-chevron-circle-left"></i></button>
             </div>
             <div class="title-container" style="transform: translate(0, 0)">
               <h2>New Medical Record</h2>
             </div>
             <div class="save-record-button-container">
-              <button type="button" class="save-record-button" onclick="location.href='../00002-updated.html'"><i class="fas fa-save"></i></button>
+              <button type="button" class="save-record-button" title="Save" onclick="location.href='../00002-updated.html'"><i class="fas fa-save"></i></button>
             </div>
 
             <div class="tab-container">
