Updates browser tab titles.

--- a/caregiver/patients-updated.html
+++ b/caregiver/patients-updated.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Meta -->
     <meta charset="UTF-8" />
-    <title>New Century Wellness Group - Caregiver Login</title>
+    <title>Patients - Updated</title>
 
     <!-- Browser Tab Icon -->
     <link rel="icon" href="../assets/NCWG-Logo.png">
