--- a/caregiver/patients/new-patient.html
+++ b/caregiver/patients/new-patient.html
@@ -4,7 +4,7 @@
     <!-- Meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>New Century Wellness Group - Caregiver Login</title>
+    <title>Create New Patient</title>
 
     <!-- Browser Tab Icon -->
     <link rel="icon" href="../../assets/NCWG-Logo.png">
