Adds caregiver login back button and tile buttons to main login.

--- a/caregiver/appointments.html
+++ b/caregiver/appointments.html
@@ -44,7 +44,7 @@
           <a href="schedules.html"><i class="fas fa-clipboard-list"></i> Schedules</a>
           <a href="messages.html"><i class="fas fa-envelope-open-text"></i> Messages</a>
           <a href="my-profile.html"><i class="fas fa-user-md"></i> My Profile</a>
-          <a href="../index.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+          <a href="../caregiver-login.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           <br>
           <br>
           
