Updates formatting and create new record page content.

--- a/caregiver/patients/new-patient.html
+++ b/caregiver/patients/new-patient.html
@@ -197,37 +197,37 @@
 
               <div class="inner-tab-content">
                 Hearing Test: 
-                <input type="radio" name="hearing" value="N/A" checked="checked"> N/A
-                <input type="radio" name="hearing" value="Pass"> Pass
-                <input type="radio" name="hearing" value="Fail"> Fail
+                <input type="radio" name="hearing" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="hearing" value="Pass"><em>Pass</em>
+                <input type="radio" name="hearing" value="Fail"><em>Fail</em>
                 <br>
                 <br>
 
                 Vision Test: 
-                <input type="radio" name="vision" value="N/A" checked="checked"> N/A
-                <input type="radio" name="vision" value="Pass"> Pass
-                <input type="radio" name="vision" value="Fail"> Fail
+                <input type="radio" name="vision" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="vision" value="Pass"><em>Pass</em>
+                <input type="radio" name="vision" value="Fail"><em>Fail</em>
                 <br>
                 <br>
 
                 Dental Exam: 
-                <input type="radio" name="dental" value="N/A" checked="checked"> N/A
-                <input type="radio" name="dental" value="Pass"> Pass
-                <input type="radio" name="dental" value="Fail"> Fail
+                <input type="radio" name="dental" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="dental" value="Pass"><em>Pass</em>
+                <input type="radio" name="dental" value="Fail"><em>Fail</em>
                 <br>
                 <br>
 
                 Developmental Exam: 
-                <input type="radio" name="develop" value="N/A" checked="checked"> N/A
-                <input type="radio" name="develop" value="Pass"> Pass
-                <input type="radio" name="develop" value="Fail"> Fail
+                <input type="radio" name="develop" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="develop" value="Pass"><em>Pass</em>
+                <input type="radio" name="develop" value="Fail"><em>Fail</em>
                 <br>
                 <br>
 
                 Scoliosis Exam: 
-                <input type="radio" name="scoliosis" value="N/A" checked="checked"> N/A
-                <input type="radio" name="scoliosis" value="Pass"> Pass
-                <input type="radio" name="scoliosis" value="Fail"> Fail
+                <input type="radio" name="scoliosis" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="scoliosis" value="Pass"><em>Pass</em>
+                <input type="radio" name="scoliosis" value="Fail"><em>Fail</em>
                 <br>
                 <br>
               </div>
@@ -251,8 +251,8 @@
               
               <div class="inner-tab-content">
                 Followup Appointment?: 
-                <input type="radio" name="followup" value="No" checked="checked"> No
-                <input type="radio" name="followup" value="Yes"> Yes
+                <input type="radio" name="followup" value="No" checked="checked"><em>No</em>
+                <input type="radio" name="followup" value="Yes"><em>Yes</em>
               </div>
               <div class="inner-tab-content">
                 Next Appointment Date: <input type="date">
@@ -262,8 +262,8 @@
 
               <div class="inner-tab-content">
                 Prescription?: 
-                <input type="radio" name="prescription" value="No" checked="checked"> No
-                <input type="radio" name="prescription" value="Yes"> Yes
+                <input type="radio" name="prescription" value="No" checked="checked"><em>No</em>
+                <input type="radio" name="prescription" value="Yes"><em>Yes</em>
               </div>
               <div class="inner-tab-content">
                 Prescription Name: <input type="text">
@@ -273,8 +273,8 @@
 
               <div class="inner-tab-content">
                 Lab Work?: 
-                <input type="radio" name="lab" value="No" checked="checked"> No
-                <input type="radio" name="lab" value="Yes"> Yes
+                <input type="radio" name="lab" value="No" checked="checked"><em>No</em>
+                <input type="radio" name="lab" value="Yes"><em>Yes</em>
               </div>
               <div class="inner-tab-content">
                 Lab Work Type: <input type="text">                
