--- a/caregiver/patients/records/new-record.html
+++ b/caregiver/patients/records/new-record.html
@@ -69,24 +69,235 @@
                </div>
 
               <div id="patient-info" class="tabcontent">
-                <h3>Patient Information</h3>
+              <h3>Patient Information</h3>
+              <div class="inner-tab-header">
+                <strong>Patient Number: <font color="#78c6ed">00002</font></strong>
+              </div>
+              <div class="inner-tab-header">
+                <strong>Medical Record Abbreviation: <font color="#78c6ed">ZSR-</font></strong>
+              </div>
+              <div class="inner-tab-header">
+                <strong>Visit Date: <font color="#78c6ed">3/2/19</font></strong>
+              </div>
+              <a><hr class="header-line"></hr></a>
+              <br>
+
+              <div class="inner-tab-content">
+                First name: <input type="text" value="Zachary">
+                <br>
+                <br>
+                Middle name: <input type="text" value="Steven">
+                <br>
+                <br>
+                Last name: <input type="text" value="Ressler">
+                <br>                    
+                <br>
+                Social Security #: <input type="number" value="123456789">
+                <br>
+                <br>
+                Insurance: <input type="text" value="UPMC">
               </div>
 
-              <div id="medical-history" class="tabcontent">
-                <h3>Medical History</h3>
+              <div class="inner-tab-content">
+                Date of Birth: <input type="date" value="1991-08-23">
+                <br>
+                <br>
+                Gender: <em>Male</em> <label class="switch">
+                  <input type="checkbox">
+                  <span class="slider round"></span>
+                </label> <em>Female</em>
+                <br>
+                <br>
+                Address: <input type="text" value="2453 Kings Lane, Pittsburgh, PA 15241">
+                <br>
+                <br>
+                Phone Number: <input type="tel" value="717-823-7689">
+                <br>
+                <br>
+                Email: <input type="email" value="zsr5008@psu.edu">
               </div>
+              <br>
+              <br>
+            </div>
 
-              <div id="physical-exam" class="tabcontent">
-                <h3>Physical Examination</h3>
+            <div id="medical-history" class="tabcontent">
+              <h3>Medical History</h3>
+              <div class="inner-tab-header">
+                <strong>Patient Number: <font color="#78c6ed">00002</font></strong>
               </div>
+              <div class="inner-tab-header">
+                <strong>Medical Record Abbreviation: <font color="#78c6ed">ZSR-</font></strong>
+              </div>
+              <div class="inner-tab-header">
+                <strong>Visit Date: <font color="#78c6ed">3/2/19</font></strong>
+              </div>
+              <a><hr class="header-line"></hr></a>
+              <br>
 
-              <div id="notes" class="tabcontent">
-                <h3>Additional Notes</h3>
+              <div>
+                Chronic Medical Conditions:
+                <br>
+                <textarea cols="50" rows="4">Neurally Mediated Hypotension</textarea>
+                <br>
+                <br>
+                Surgeries:
+                <br>
+                <textarea cols="50" rows="4">Wisdom Teeth</textarea>
+                <br>
+                <br>
+                Medications:
+                <br>
+                <textarea cols="50" rows="4">Allegra 10mg</textarea>
+                <br>
+                <br>
+                Treatments:
+                <br>
+                <textarea cols="50" rows="4">None</textarea>
+                <br>
+                <br>
+                Allergies:
+                <br>
+                <textarea cols="50" rows="4">Seasonal (Ragweed)</textarea>
+                <br>
+                <br>
+                Physical Activity Limitations:
+                <br>
+                <textarea cols="50" rows="4">None</textarea>
               </div>
             </div>
 
+            <div id="physical-exam" class="tabcontent">
+              <h3>Physical Examination</h3>
+              <div class="inner-tab-header">
+                <strong>Patient Number: <font color="#78c6ed">00002</font></strong>
+              </div>
+              <div class="inner-tab-header">
+                <strong>Medical Record Abbreviation: <font color="#78c6ed">ZSR-</font></strong>
+              </div>
+              <div class="inner-tab-header">
+                <strong>Visit Date: <font color="#78c6ed">3/2/19</font></strong>
+              </div>
+              <a><hr class="header-line"></hr></a>
+              <br>
+
+              <div class="inner-tab-content">
+                Height: <input type="number" value="72" maxlength="5" size="5" style="width: 60px"> <em>Inches</em>
+                <br>
+                <br>
+                Weight: <input type="number" value="155" maxlength="5" size="5" style="width: 60px"> <em>Pounds</em>
+                <br>
+                <br>
+                Blood Pressure: <input type="number" value="68" maxlength="3" size="3" style="width: 40px"> / <input type="number" value="128" maxlength="3" size="3" style="width: 40px">
+                <br>
+                <br>
+                Abnormalities:
+                <br>
+                <textarea cols="30" rows="4">None</textarea>
+              </div>
+
+              <div class="inner-tab-content">
+                Hearing Test: 
+                <input type="radio" name="hearing" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="hearing" value="Pass"><em>Pass</em>
+                <input type="radio" name="hearing" value="Fail"><em>Fail</em>
+                <br>
+                <br>
+
+                Vision Test: 
+                <input type="radio" name="vision" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="vision" value="Pass"><em>Pass</em>
+                <input type="radio" name="vision" value="Fail"><em>Fail</em>
+                <br>
+                <br>
+
+                Dental Exam: 
+                <input type="radio" name="dental" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="dental" value="Pass"><em>Pass</em>
+                <input type="radio" name="dental" value="Fail"><em>Fail</em>
+                <br>
+                <br>
+
+                Developmental Exam: 
+                <input type="radio" name="develop" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="develop" value="Pass"><em>Pass</em>
+                <input type="radio" name="develop" value="Fail"><em>Fail</em>
+                <br>
+                <br>
+
+                Scoliosis Exam: 
+                <input type="radio" name="scoliosis" value="N/A" checked="checked"><em>N/A</em>
+                <input type="radio" name="scoliosis" value="Pass"><em>Pass</em>
+                <input type="radio" name="scoliosis" value="Fail"><em>Fail</em>
+                <br>
+                <br>
+              </div>
+              <br>
+              <br>
+            </div>
+
+            <div id="notes" class="tabcontent">
+              <h3>Additional Notes</h3>
+              <div class="inner-tab-header">
+                <strong>Patient Number: <font color="#78c6ed">00002</font></strong>
+              </div>
+              <div class="inner-tab-header">
+                <strong>Medical Record Abbreviation: <font color="#78c6ed">ZSR-</font></strong>
+              </div>
+              <div class="inner-tab-header">
+                <strong>Visit Date: <font color="#78c6ed">3/2/19</font></strong>
+              </div>
+              <a><hr class="header-line"></hr></a>
+              <br>
+              
+              <div class="inner-tab-content">
+                Followup Appointment?: 
+                <input type="radio" name="followup" value="No"><em>No</em>
+                <input type="radio" name="followup" value="Yes" checked="checked"><em>Yes</em>
+              </div>
+              <div class="inner-tab-content">
+                Next Appointment Date: <input type="date" value="2019-04-02">
+              </div>
+              <br>
+              <br>
+
+              <div class="inner-tab-content">
+                Prescription?: 
+                <input type="radio" name="prescription" value="No" checked="checked"><em>No</em>
+                <input type="radio" name="prescription" value="Yes"><em>Yes</em>
+              </div>
+              <div class="inner-tab-content">
+                Prescription Name: <input type="text">
+              </div>
+              <br>
+              <br>
+
+              <div class="inner-tab-content">
+                Lab Work?: 
+                <input type="radio" name="lab" value="No" checked="checked"><em>No</em>
+                <input type="radio" name="lab" value="Yes"><em>Yes</em>
+              </div>
+              <div class="inner-tab-content">
+                Lab Work Type: <input type="text">                
+              </div>
+              <br>
+              <br>
+
+              <div>
+                Additional Notes: 
+                <br>
+                <textarea cols="80" rows="12">
+Physical Therapy Visit:
+
+• 4x10 ankle circles (2x each way)
+• 3x10 forward and back
+• 3x10 side to side
+                </textarea>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+    </body>
     
     <!-- Scripts -->
     <script src="../../../scripts/index.js"></script>
