Updates My Profile page.

--- a/patient/my-profile.html
+++ b/patient/my-profile.html
@@ -55,10 +55,15 @@
           </div>
           
           <div id="patient-info">
-            <div style="display: inline-block; width: 100%">
+            <div style="display: inline-block; width: 50%">
               <strong>Patient Number: <font color="#78c6ed">00002</font></strong>
             </div>
-              <a><hr class="header-line"></hr></a>
+            <div class="save-record-button-container" style="transform: translate(0, -25px)">
+              <button type="button" class="save-record-button" title="Save"><i class="fas fa-save"></i></button>
+            </div>
+            <br>
+            <br>
+            <a><hr class="header-line"></hr></a>
             <br>
 
             <div style="display: inline-block; width: 45%">
