Updates Services page.

--- a/patient/services.html
+++ b/patient/services.html
@@ -48,7 +48,46 @@
           <a href="../patient-login.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           <br>
           <br>
+          <br>
+          <br>
+
+          <h2>Select one of our services to see more!</h2>
+          <br>
           
+          <div class="service-choice">
+            <br>
+            <br>
+            <i class="fas fa-user-md" style="font-size: 40px"></i>
+            <br>
+            Primary Care Physicians
+          </div>
+          <div class="service-choice">
+            <br>
+            <br>
+            <br>
+            <i class="fas fa-user-nurse" style="font-size: 40px"></i>
+            <br>
+            Nurses
+          </div>
+
+          <br>
+
+          <div class="service-choice" style="transform: translate(-2px, 5px)">
+            <br>
+            <br>
+            <br>
+            <i class="fas fa-running"style="font-size: 40px"></i>
+            <br>
+            Physical Therapist
+          </div>
+          <div class="service-choice" style="transform: translate(-2px, 5px)">
+            <br>
+            <br>
+            <br>
+            <i class="fas fa-utensils" style="font-size: 40px"></i>
+            <br>
+            Nutritionist
+          </div>
         </div>
       </div>
     </div>
