Updates Services page.

--- a/patient/services.html
+++ b/patient/services.html
@@ -51,7 +51,7 @@
           <br>
           <br>
 
-          <h2>Select one of our services to see more!</h2>
+          <h2>Select one of our services to learn more!</h2>
           <br>
           
           <div class="service-choice">
