Updates Portal Home.

--- a/patient/portal.html
+++ b/patient/portal.html
@@ -49,7 +49,72 @@
           <br>
           <br>
           <br>
+          <br>
 
+          <h2>Welcome to New Century Wellness Group, Zach!</h2>
+          <br>
+
+
+          <div class="content">
+            <h3>Pending Messages</h3>
+
+            <table class="patient-table">
+              <thead>
+                <tr>
+                  <td>Date</td>
+                  <td>From</td>
+                  <td>Subject</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>4/14/19</td>
+                  <td>Dr. Jones</td>
+                  <td>Followup Appointment</td>
+                </tr>
+                <tr>
+                  <td>4/3/19</td>
+                  <td>Dr. Garcia</td>
+                  <td>Prescription</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="content">
+            <h3>Reminders</h3>
+
+            <table class="patient-table">
+              <thead>
+                <tr>
+                  <td>Date</td>
+                  <td>Type</td>
+                  <td>Subject</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>4/14/19</td>
+                  <td>Dr. Jones</td>
+                  <td>Followup Appointment</td>
+                </tr>
+                <tr>
+                  <td>4/3/19</td>
+                  <td>Dr. Garcia</td>
+                  <td>Prescription</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <br>
+          <br>
+
+          <div class="content">
+            <h3>Upcoming Appointments</h3>
+          </div>
+          <div class="content">
+            <h3>Past Appointments</h3>
+          </div>
         </div>
       </div>
     </div>
