--- a/patient/appointments.html
+++ b/patient/appointments.html
@@ -48,7 +48,10 @@
           <a href="../patient-login.html"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           <br>
           <br>
+          <br>
+          <br>
           
+          <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sockoman32%40aol.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
     </div>
